spacing mobile fixed

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,10 @@ body {
     font-family: Inter, sans-serif;
     font-size: 2rem;
 }
+
+@media screen and (max-width:500px){
+    #header{
+      font-size:16px;
+      letter-spacing: 10px;
+    }
+}
